# stupid-screencast

./: .gitignore  Cargo.toml  config.toml.example
src/: config.rs  main.rs  portal.rs
