[package]
name = "stupid-screencast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zbus = "3.0.0"
async-std = { version = "1.10.0", features = ["attributes"] }
gstreamer = "0.18.8"
toml = "0.5"
thiserror = "1.0"
serde = "1.0.145"
